# 3DRVE-batch

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  run_batch_solver.bat  run_json_single_case.bat  run_lhs_doe_batch.bat
configs/: parameters.example.yaml  project.yaml  woven_weave_2d_doe.json
configs/doe_templates/: angle_interlock_weave_3d_doe.json  layered_woven_weave_2d_doe.json  orthogonal_weave_3d_doe.json  sheared_woven_weave_2d_doe.json  woven_weave_2d_doe.json
configs/tools/: README.md  findjsonkey.py  user_RVE_analysis.json
docs/: architecture.md  modelling_interfaces.md  pipeline.md
examples/: single_case.yaml
scripts/: build_dataset.py  generate_doe_templates.py  run_batch.py  run_batch_doe.py  run_batch_solver.py  run_current_pipeline.py  run_single.py
src/rve_batch/: __init__.py  batch_calculation.py  batch_solver.py  doe.py  pipeline.py  visualization.py
src/rve_batch/batch/: __init__.py  case.py  runner.py
src/rve_batch/config/: schema.py  settings.py
src/rve_batch/ml/: __init__.py  dataset.py  train.py
src/rve_batch/modelling/: __init__.py  angle_interlock.py  models.py  orthogonal_weave.py  texgen_runner.py  texgen_utils.py  woven_weave.py
src/rve_batch/postprocessing/: __init__.py  vtu_results.py
src/rve_batch/preprocessing/: __init__.py  material_cell_data.py  quality.py  vtu_order.py
src/rve_batch/sampling/: __init__.py  parameter_sampling.py  result_sampling.py
src/rve_batch/solver/: __init__.py  analysis_config.py  plexian_solver.py
src/rve_batch/utils/: files.py  logging.py  (+1 more)
tests/unit/: test_scaffold.py
